import / export metadate